basic html without css

--- a/index.html
+++ b/index.html
@@ -5,7 +5,18 @@
     </head>
     <body>
         <div class="gboard">
-        
+            <div class="guess-word">
+                <div>
+                    Guess this word!
+                </div>
+                <div id="word-input">
+                    
+                </div>
+                <div>
+                    Press enter or <button>Click here</button> to submit your guess!
+                </div>
+            </div>
+            <div class="chances"></div>
         </div>
         <div id="libraries">
             <script src="app.js"></script>
